Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-05-25 (SVN):
    * in_sdl.c: IN_JoystickGetAxis() and IN_JoystickKeyeventForAxis() no
      longer accept a joystick id pointer parameter, but use the joy_id
      variable. Disabled the "keyevents for joystick axes" hack for now.
      Added a hack making IN_ActivateMouse() and IN_DeactivateMouse() to
      affect the trackball in order for joystick trackballs convert to
      mousemove properly. For the same purpose, move joystick trackball
      querying from IN_JoyMove() to IN_MouseMove(). Reserved K_AUX29-32
      for hat (POV) switch motion (like in_win.c, code to be added soon)
      and changed SDL_JOYBUTTONUP/DOWN events' upper key limit to AUX28.
    * docs/README: Removed the disabled joy_axiskeyevents documentation.
    * updated version date stamp to 2012-05-25.

2012-05-25 (SVN):
    * timidity: Made DLS instruments support optional. Default is no,
      because the dls code we inherited from libtimidity and SDL_sound
      isn't good enough and it isn't used in unix installations where
      timidity is normally needed, either.

2012-05-24 (SVN):
    * libs/timidity/instrum_dls.c (load_instrument_dls): Merged changes
      from vavoom svn repo rev. 4175 to fix loading of drums.
    * libs/timidity/instrum_dls.c (load_connection): Merged some of the
      changes from vavoom svn repo revisions 4425 and 4428 to somewhat
      improve timidity's dls use: still sounds horrible with many midi
      files. Rest of the changes from those two vavoom revisions may (or
      may not) be merged later.

2012-05-24 (SVN):
    * libs/timidity/timidity_internal.h (struct _MidSong): Renamed the
      patches member to dlspatches.
    * libs/timidity/timidity.h: Typo fixes.
    * libs/timidity/timidity.c: Adjusted for the struct _MidSong change.
    * libs/timidity/instrum_dls.c: Whitespace tidy-up. Removed the RIFF